Fixed toolbar's overflow example including:\n\nMenu aligns, splitbutton over image and toolbar's overflow button

--- a/src/resources/css/extjs_rtl.css
+++ b/src/resources/css/extjs_rtl.css
@@ -64,5 +64,12 @@ x-btn-mc em.x-btn-arrow { padding-left: 12px }
 .x-item-disabled .x-tbar-page-prev{ background-image: url(../images/default/grid/page-prev-disabled-rtl.gif) !important; }
 
 /*Toobar elements*/
-.x-toolbar .x-btn-over .x-btn-mc em.x-btn-split { background-image:url(../images/default/button/s-arrow-o.gif); }
+.x-toolbar .x-btn-over .x-btn-mc em.x-btn-split, .x-toolbar .x-btn-click .x-btn-mc em.x-btn-split,
+.x-toolbar .x-btn-menu-active .x-btn-mc em.x-btn-split, .x-toolbar .x-btn-pressed .x-btn-mc em.x-btn-split
+{
+    background-image:url(../images/default/button/s-arrow-o.gif);
+}
 .x-toolbar .x-btn-mc em.x-btn-split { background-image:url(../images/default/button/s-arrow-noline.gif); }
+.x-toolbar-more-icon { background-image:url(../images/default/toolbar/more-rtl.gif) !important; }
+.x-btn-mc em.x-btn-arrow { background-position:left center; padding-right:0; padding-left:10px; }
+.x-toolbar-more em.x-btn-arrow { padding-left:0}
